Update 1. Introduction to Pakistan LFS.md

--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -46,19 +46,19 @@ LFS uses a two-stage cluster sampling method in general, which includes two step
 More details of the sampling frame & procedure are included in each year's annual report. Here is an example of LFS 2020:
    
 ```
-**Universe**: The universe for Labour Force Survey consists of all urban and rural areas of the four provinces of Pakistan and Islamabad excluding military restricted areas. The population of excluded areas constitutes about 1% of the total population.
+Universe: The universe for Labour Force Survey consists of all urban and rural areas of the four provinces of Pakistan and Islamabad excluding military restricted areas. The population of excluded areas constitutes about 1% of the total population.
 
 A stratified two-stage sample design is adopted for the survey.
 
 Pakistan Bureau of Statistics (PBS) has developed its own sampling frame for both urban and rural domains. Each city/town is divided into enumeration blocks. Each enumeration block is comprised of 200 to 250 households on the average with well-defined boundaries and maps. The frame used in this survey was the most recent frame which is updated through Population and Housing Census 2017.
 
-**Rural Domain**: Each administrative district in the Punjab, Sindh and Khyber Pakhtunkhawa (KP) is considered an independent stratum whereas in Balochistan, each administrative division constitutes a stratum.
+Rural Domain: Each administrative district in the Punjab, Sindh and Khyber Pakhtunkhawa (KP) is considered an independent stratum whereas in Balochistan, each administrative division constitutes a stratum.
 Urban Domain: All administrative divisions in the four provinces, constitutes separate stratum.
 
-**Selection of primary sampling units (PSUs)**
+Selection of primary sampling units (PSUs)
 Enumeration blocks in both Urban and Rural domains are taken as Primary Sampling Units (PSUs). Sample PSUs from each ultimate stratum/sub-stratum are selected with probability proportional to size (PPS) method of sampling scheme. In both Urban and Rural domains, the number of households in an enumeration blocks considered as measure of size.
 
-**Selection of secondary sampling units (SSUs)**
+Selection of secondary sampling units (SSUs)
 The listed households of sample PSUs are taken as Secondary Sampling Units (SSUs). A specified number of households i.e. 12 from each urban sample PSU and 16 from rural sample PSU are selected with equal probability using systematic sampling technique with a random start.
 
 ```    
