Update 1.Introduction to Pakistan LFS.md

--- a/Support/B - Country Survey Details/PAK/LFS/1.Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1.Introduction to Pakistan LFS.md
@@ -94,7 +94,7 @@ The official reports detailed results by gender, sector (i.e. urban or rural), a
 
 LFS has its own conception and definition documentation for variables. These documents can be found on the International Labour Organization data catalog [website](https://www.ilo.org/surveyLib/index.php/catalog/?page=1&from=2000&to=2020&ps=15). When coding GLD variable `lstatus` and `potential_lf`, we need to adapt GLD definition for *being employed* and *unemployed* to fit LFS's own definition, and more often, this requires us to narrow LFS's definition down and expand GLD definition so that they produce an overlapping area for us to code related variables. 
 
-Earlier years like 1991 and 1999 are coded slightly differently from other years as they have less labor questions. A more comprehensive explanation of the harmonization choices [is covered here in a separate document](Labor_Status_and_Labor_Force_Participation.md).    
+Earlier years before 2012 are coded slightly differently from other years as they have less labor questions. A more comprehensive explanation of the harmonization choices [is covered here in a separate document](Labor_Status_and_Labor_Force_Participation.md).    
 
         
 ### Coding of industry and occupation codes
