Update 1.Introduction to Pakistan LFS.md

--- a/Support/B - Country Survey Details/PAK/LFS/1.Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1.Introduction to Pakistan LFS.md
@@ -8,7 +8,7 @@ The Pakistan Labor Force Survey (LFS) is a household-based sample survey conduct
 
 ## What does the PAK LFS cover?
 
-The PAK LFS mainly covers details information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. Since 1999, LFS began to include information on households' immigration status, such as whether a given household has migrated or not. Years used for harmonization range from 1992 to 2020 discontinuously, 15 years in total. 
+The PAK LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. Since 1999, LFS began to include information on households' immigration status, such as whether a given household has migrated or not. Years used for harmonization range from 1992 to 2020 discontinuously, 15 years in total. 
 
 Years and sample size of LFS harmonized for GLD are: 
 
@@ -32,7 +32,7 @@ Years and sample size of LFS harmonized for GLD are:
 
 1992 and 2009 do not have annual reports publicly available online, therefore, official number of sample size for these two years are missing. 
 
-Note that the number of households in our harmonized datasets do not equal the number of sample size in each year's annual report. We follow [coding scheme](coding_LFS_2017-18) by the BPS to code household identification variable `hhid`, which produces number of households. Though no observation dropped in any year, numbers we got differ from those in the annual reports for unknown reasons. Coding scheme documentation is official guide that provides detailed information on how to use the original variable `PrCode`, process code, to get information on urban/rural status, household number, province, stratum etc. from a certain digit of the variable. The link above to the example of coding scheme of year 2018.  
+Note that the number of households in our harmonized datasets do not equal the number of sample size in each year's annual report. We follow [coding scheme](coding_LFS_2017-18) by the BPS to code household identification variable `hhid`, which produces number of households. Though no observation dropped in any year, numbers we got differ from those in the annual reports for unknown reasons. Coding scheme documentation is an official guide that provides detailed information on how to use the original variable `PrCode`, process code, to get information on urban/rural status, household number, province, stratum etc. from a certain digit of the variable.  
 
 ## Where can the data be found?
 
@@ -41,7 +41,7 @@ The microdata of LFS are publicly available on the official website of PBS throu
 
 ## What is the sampling procedure?
 
-LFS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the primary sampling units (PSU), which are enumeration blocks in both urban and rural domains 2) selecting the secondary sampling units, which include listed households of sample PSUs. The first year of the GLD, 1992, is only nationally representative at urban/rural level; the last year of harmonization, 2020, is the only year that has district level of representativeness; and all years in between are representative at the rural/urban level of the province. 
+LFS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the primary sampling units (PSU), which are enumeration blocks in both urban and rural domains 2) selecting the secondary sampling units, which include listed households of sample PSUs. The first year of the GLD, 1992, is only nationally representative at urban/rural level; the last year of harmonization, 2020, is the only year that has district level of representativeness; and all years in between are representative at rural/urban level of the province. 
 
 More details of the sampling frame & procedure are included in each year's annual report. Here is an example of LFS 2020:
    
@@ -66,7 +66,7 @@ The listed households of sample PSUs are taken as Secondary Sampling Units (SSUs
   
 ## What is the geographic significance level?
 
-The official reports detailed results by gender, sector (i.e. urban or rural), and the four main provinces in Pakistan – Punjab, Sindh, the North-West Frontier Province(N.W.F.P.), and Balochistan. In the raw datasets of all LFSs, 2010, 2014, 2017, and 2018 are the only four years that contain more than the four major provinces. The table below shows provinces included in each year and the geographic significance level.
+The official reports detailed results by gender, sector (i.e. urban or rural), and the four main provinces in Pakistan – Punjab, Sindh, the North-West Frontier Province(N.W.F.P.), and Balochistan. Among the raw datasets of all LFSs, 2010, 2014, 2017, and 2018 are the only four years that contain more than the four major provinces. The table below shows provinces included in each year and the geographic significance level.
 
 | **Year**	| **Province Covered**	| **Historical Change**	| 
 | :------:	| :-------------------: | :-------------------:	| 
@@ -92,15 +92,15 @@ The official reports detailed results by gender, sector (i.e. urban or rural), a
 
 ### Definition of Labor Status and Labor Force Participation
 
-LFS has its own conception and definition documentation for variables. These documents can be found on the International Labour Organization data catalog [website](https://www.ilo.org/surveyLib/index.php/catalog/?page=1&from=2000&to=2020&ps=15). When coding GLD variable `lstatus` and `potential_lf`, we need to adapt GLD definition for *being employed* and *unemployed* to fit LFS's own definition, and more often, this requires us to narrow LFS's definition down and expand GLD definition so that they produce an overlapping area for us to code related variables. 
+LFS has its own conception and definition documentation for variables. These documents can be found on the International Labour Organization data catalog [website](https://www.ilo.org/surveyLib/index.php/catalog/?page=1&from=2000&to=2020&ps=15). When coding GLD variable `lstatus` and `potential_lf`, we need to adapt GLD definition for *being employed* and *unemployed* to fit LFS's own definition, and more often, this requires us to expand GLD definition.
 
 Earlier years before 2012 are coded slightly differently from other years as they have less labor questions. A more comprehensive explanation of the harmonization choices [is covered here in a separate document](Labor_Status_and_Labor_Force_Participation.md).    
 
         
 ### Coding of industry and occupation codes
 
- Regarding industrial classification, 3 versions of Pakistani Standard Industrial Classification (PSIC) were involved from 1992 to 2020 – PSIC 1970, 2007, 2010. They are based on different versions of ISIC and were used in different years of LFS. in the [separate document.](Correspondence_National_International_Classifications.md) 
+Regarding industrial classification, 3 versions of Pakistani Standard Industrial Classification (PSIC) were involved from 1992 to 2020 – PSIC 1970, 2007, 2010. They are based on different versions of ISIC and were used in different years of LFS. in the [separate document.](Correspondence_National_International_Classifications.md) 
 
-Although three versions of Pakistani Standard Occupational Codes (PSCO) were involved – PSCO 1994, 2011, and 2015, they are based on two versions of internation standards which are ISCO 1988 AND 2008. PSCO 1994 follows ISCO 1988 whereas PSCO 2011 and 2015 follow ISCO 2008. 
+Although three versions of Pakistani Standard Occupational Codes (PSCO) were involved – PSCO 1994, 2011, and 2015, they are based on two versions of international standards which are ISCO 1988 AND 2008. PSCO 1994 follows ISCO 1988 whereas PSCO 2011 and 2015 follow ISCO 2008. 
 
-In general, each single version of national standards, regardless of industry or occupation, is almost identical to their international counterpart at two-digit level. Details about industrial and occuaptional mappings are covered in this [separate document.](Correspondence_National_International_Classifications.md) 
+In general, each single version of national standards, regardless of industry or occupation, is almost identical to their international counterparts at two-digit level. Details about industrial and occuaptional mappings are covered in this [separate document.](Correspondence_National_International_Classifications.md) 
