Added some comments

--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -1,5 +1,11 @@
 # Introduction to Pakistan national Labor Force Survey (LFS)
 
+- [What is the PAK LFS](#what-is-the-pak-lfs)
+- [What does the PAK LFS cover?](#what-does-the-pak-lfs-cover)
+- [Where can the data be found?](#where-can-the-data-be-found)
+- [What is the sampling procedure?](#what-is-the-sampling-procedure)
+- [What is the geographic significance level?](#what-is-the-geographic-significance-level)
+- [Other noteworthy aspects](#other-noteworthy-aspects)
 
 ## What is the PAK LFS?
 
@@ -36,14 +42,14 @@ Note that the number of households in our harmonized datasets do not equal the n
 
 ## Where can the data be found?
 
-The microdata of LFS are publicly available on the official website of PBS through this [link](https://www.pbs.gov.pk/content/lfs-2010-2018-microdata). And accordingly, each year's report of 2007 to 2020 can be found through the [link here](https://www.pbs.gov.pk/content/all-reports-and-publications). 
+The microdata of LFS from 2009 are publicly available on the official website of PBS through this [link](https://www.pbs.gov.pk/content/microdata). And accordingly, each year's report of 2007 to 2020 can be found through the [link here](https://www.pbs.gov.pk/content/all-reports-and-publications). Data prior to 2009 was shared internally with the World Bank.
 
 
 ## What is the sampling procedure?
 
 LFS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the primary sampling units (PSU), which are enumeration blocks in both urban and rural domains 2) selecting the secondary sampling units, which include listed households of sample PSUs. The first year of the GLD, 1992, is only nationally representative at urban/rural level; the last year of harmonization, 2020, is the only year that has district level of representativeness; and all years in between are representative at rural/urban level of the province. 
 
-More details of the sampling frame & procedure are included in each year's annual report. Here is an example of LFS 2020:
+More details of the sampling frame & procedure are included in each year's annual report. Here is an example of [LFS 2020](https://www.pbs.gov.pk/sites/default/files/labour_force/publications/lfs2020_21/LFS_2020-21_Report.pdf) (page 19/20 of the PDF):
    
 ```
 Universe: The universe for Labour Force Survey consists of all urban and rural areas of the four provinces of Pakistan and Islamabad excluding military restricted areas. The population of excluded areas constitutes about 1% of the total population.
@@ -65,6 +71,12 @@ The listed households of sample PSUs are taken as Secondary Sampling Units (SSUs
   
   
 ## What is the geographic significance level?
+
+****************
+*** COMMENT ***
+text above says 1992 is only national (urban rural) the table below says it is province. Please confirm which one it is.
+Also: for 2005 onward at least it is province + urban / rural
+****************
 
 The official reports detailed results by gender, sector (i.e. urban or rural), and the four main provinces in Pakistan – Punjab, Sindh, the North-West Frontier Province(N.W.F.P.), and Balochistan. Among the raw datasets of all LFSs, 2010, 2014, 2017, and 2018 are the only four years that contain more than the four major provinces. The table below shows provinces included in each year and the geographic significance level.
 
