updated Kenya information using reports

--- a/Support/B - Country Survey Details/KEN/KCHSP/1. Introduction to KCHSP.md
+++ b/Support/B - Country Survey Details/KEN/KCHSP/1. Introduction to KCHSP.md
@@ -10,7 +10,7 @@
 
 ## What is the KEN KCHSP?
 
-Kenya National Bureau of Statistics (KNBS) developed the Kenya Continuous Household Survey Programme (KCHSP) to address existing data gaps from other surveys. KCHSP provides quarterly data on socio-economic indicators. The key modules in this programme (KCHSP) are; the quarterly labour force and the quarterly household budget which will provide data on employment and household consumption, respectively.
+Kenya National Bureau of Statistics (KNBS) developed the Kenya Continuous Household Survey Programme (KCHSP) to address existing data gaps from other surveys. KCHSP provides quarterly data on socio-economic indicators. The key modules in this programme (KCHSP) are; the quarterly labour force and the quarterly household budget which will provide data on employment, poverty and household consumption, respectively.
 
 ## What does the KEN KCHSP cover?
 
@@ -26,10 +26,12 @@ The survey covers all the counties in Kenya based on the following levels: Natio
 Once data cleaning and analysis is completed, both the Micro data and the survey reports are archived and disseminated through KNBS website for public use. However, in case the website is not available microdata can be found in the following [website](https://statistics.knbs.or.ke/nada/index.php/home)
 
 ## What is the sampling procedure?
-n/a
+The sampling processs used two set of units (clusters and households). The survey design is such that all individuals interviewed are elegible for various modules of the survey. The requiered clusters are selected systtematicallt with equal probablilty and then each stratum is randomized into four pannels (see KCSHP QLFS Q1 2019). A number of households are selected by cluster and are sampled systematically from a master list of updated households.
+
 
 ## What is the geographic significance level?
-n/a
+
+For both years, the sample is geographically signifant for urban rural strata in 45 counties plus Nairobi and Mombasa Counties (fully urban).
 
 ## Other noteworthy aspects
 
