Update 1. Introduction to SAKERNAS.md

--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -129,6 +129,29 @@ Household IDs were only created if 1) the given year has the full list of identi
 | 2010-2019  | province, district, sector| No| 
 
 
+### Coding Employment Status
+
+Accroding to the Indonesian statistics office, any casual workers are not defined as "employess" as they do not have a *stable*work contract (refer to the creenshot below). But meanwhile casual workers still work for payment, which makes them "paid employees" in our definition. In this sense, we coded as follows:
+
+**Employer**:
+- Employer assisted by temporary workers/unpaid workers
+- Employer assisted by permanent workers
+
+**Non-paid employee**:
+- unpaid workers
+
+**Paid employee**:
+- employee
+- casual employee in agriculture
+- casual employee in non-agriculture
+
+**Self-employed**:
+- Own-account workers
+
+![casual_worker1](utilities/casual_worker1.png)
+![casual_worker2](utilities/casual_worker2.png)
+
+
 ### Definition of Labor Status and Labor Force Participation
 
 From 1989 to 2019, the structure of SAKERNAS, especially the labor force module has changed greatly. Not only does the number of labor-related questions increase, but also the logic as well as the order of questions change. Although our definition of the GLD variable `lstatus` and `potential_lf` never change, still, we needed to find the most appropriate question or a set of questions in the suvey to define the two variables, which sometimes requires slight adaptation. In order to make sure that we understood the intention and the logic of the questions and made adaptations correctly, we used labor force participation rate in the report from [International Labour Organization (ILO) microdata library](https://www.ilo.org/surveyLib/index.php/catalog) ([here](utilities/IDN_2015_LFS_AUG_Report.pdf) is an example of 2015) as a benchmark for years with adaptations. But only 2014-2017 has detailed employed population, unemployed population and non-labor force data from ILO. We also used [World Bank country indicators](https://data.worldbank.org/indicator/SL.TLF.CACT.ZS?end=2020&locations=ID&start=2000) as a general reference. Here are some brief explanations. A more comprehensive explanation of the harmonization choices [is covered here in a separate document](Labor_Status_and_Labor_Force_Participation.md).    
