--- a/Support/B - Country Survey Details/BRA/PNAD/1. Introduction to PNAD.md
+++ b/Support/B - Country Survey Details/BRA/PNAD/1. Introduction to PNAD.md
@@ -62,7 +62,7 @@ Some municipalities considered large in terms of population but which are locate
 In each of the strata of non-self-representative municipalities, municipalities are selected through a systematic draw with probability proportional to the population existing at the time of the Demographic Census. In the second stage, the selection of sectors is made within each municipality contained in the sample of the first stage, using the same method already described for the selection of sectors in the strata of metropolitan regions or self-representative municipalities.
 Note that, even though the sampling logic is consistent over time, there are changes over time (e.g.m the blocks come from different censuses).
 
-More information is available on IBGE [methodological notes] (https://ftp.ibge.gov.br/Trabalho_e_Rendimento/Pesquisa_Nacional_por_Amostra_de_Domicilios_continua/Notas_metodologicas/notas_metodologicas.pdf).
+More information is available on IBGE [methodological notes](https://ftp.ibge.gov.br/Trabalho_e_Rendimento/Pesquisa_Nacional_por_Amostra_de_Domicilios_continua/Notas_metodologicas/notas_metodologicas.pdf).
 
 ## What is the geographic significance level?
 
@@ -89,4 +89,22 @@ Another important difference is related to the years of study. The National Cons
 
 ### Coding of industry and occupation codes
 
-The PNAD codes occupation is based on the Brazilian National Occupation classification (CBO) and industry based on the National Industry classification (CNAE). Different survey editions use different iterations of the CBO and CNAE, which in turn lead to different mappings to the International Standard Classification of Occupations (ISCO) and International Standard Industrial Classification (ISIC). The details on the process of creating the correspondence between national and international classifications are covered [here in a separate document](Correspondence_National_International_Classifications.md). The table below shows the overview of the underlying version of the national classification and what version of the international they have been matched to.
+The PNAD codes occupation is based on the Brazilian National Occupation classification (CBO) and industry based on the National Industry classification (CNAE). Different survey editions use different iterations of the CBO and CNAE, which in turn lead to different mappings to the International Standard Classification of Occupations (ISCO) and International Standard Industrial Classification (ISIC). The details on the process of creating the correspondence between national and international classifications are covered [here in a separate document for industry classfications](Correspondence between PNAD industry classification and ISIC.md). and [here for occupation classifications](Correspondence between PNAD occupation classification and ISCO.md). 
+
+The tables below show the overview of the underlying version of the national classification and what version of the international they have been matched to.
+
+#### Occupation
+
+| Years     | Classification used in raw data | Target classification | Target depth
+|-----------|---------------------------------|-----------------------|--------------|
+| 1981/1990 | CBO 1980                        | ISCO 1988             | Two Digits   |
+| 1992/2001 | CBO 1991                        | ISCO 1988             | Two Digits   |
+| 2002/2011 | CBO Domiciliar (CBO-Dom)        | ISCO 1988             | Two Digits   |
+
+#### Industry
+
+| Year      | Classification used in raw data | Survey | Intermediate classification needed | Intermediate depth | Target classification | Target depth |
+|-----------|---------------------------------|--------|------------------------------------|--------------------|-----------------------|--------------|
+| 1981/2001 | CNAE 1980/1991                  | PNAD   | CNAE-DOM 1.0                       | Two Digits         | Isic rev 3            | Two Digits   |
+| 2002/2011 | CNAE-DOM 1.0                    | PNAD   | --------                           | Two Digits         | Isic rev 3            | Two Digits   |
+
