--- a/Support/B - Country Survey Details/BRA/PNAD/1. Introduction to PNAD.md
+++ b/Support/B - Country Survey Details/BRA/PNAD/1. Introduction to PNAD.md
@@ -89,7 +89,7 @@ Another important difference is related to the years of study. The National Cons
 
 ### Coding of industry and occupation codes
 
-The PNAD codes occupation is based on the Brazilian National Occupation classification (CBO) and industry based on the National Industry classification (CNAE). Different survey editions use different iterations of the CBO and CNAE, which in turn lead to different mappings to the International Standard Classification of Occupations (ISCO) and International Standard Industrial Classification (ISIC). The details on the process of creating the correspondence between national and international classifications are covered [here in a separate document for industry classfications](Correspondence between PNAD industry classification and ISIC.md). and [here for occupation classifications](Correspondence between PNAD occupation classification and ISCO.md). 
+The PNAD codes occupation is based on the Brazilian National Occupation classification (CBO) and industry based on the National Industry classification (CNAE). Different survey editions use different iterations of the CBO and CNAE, which in turn lead to different mappings to the International Standard Classification of Occupations (ISCO) and International Standard Industrial Classification (ISIC). The details on the process of creating the correspondence between national and international classifications are covered [here in a separate document for industry classfications](Correspondence%20between%20PNAD%20industry%20classification%20and%20ISIC.md). and [here for occupation classifications](Correspondence%20between%20PNAD%20occupation%20classification%20and%20ISCO.md). 
 
 The tables below show the overview of the underlying version of the national classification and what version of the international they have been matched to.
 
