Update 1.Introduction to ECH.md

--- a/Support/B - Country Survey Details/COL/ECH/1.Introduction to ECH.md
+++ b/Support/B - Country Survey Details/COL/ECH/1.Introduction to ECH.md
@@ -47,7 +47,7 @@ The data is:
 - Monthly representative for each of the 13 metropolitan areas.
 - Annually representative for the sub-regional levels (departments).
 
-However, the survey only covers 24 of the 33 departments(sub-regional levels) (32 plus a Bogotá D.C.).
+However, the survey only covers 23 departments(sub-regional levels).
 
 The missing ones are the Caribbean archipelago of San Andres and 8 provinces in Amazonia and Orinoquia. The survey is still representative nationally as they only represent some 5% of the population.
 
