Update 1. Introduction to QLFS.md

--- a/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
@@ -157,7 +157,7 @@ As stated at the beginning, data is available freely on the [Data First website]
 
 All years have both LMDSA and QLFS available on DataFirst, and therefore, we used LMDSA for harmonization because of its simplicity and QLFS for cross-checking purposes. Note that the [first version of the 2020 code](https://github.com/worldbank/gld/tree/main/GLD/ZAF/ZAF_2020_QLFS/ZAF_2020_QLFS_v01_M_v01_A_GLD/Programs) used QLFS data as LMDSA was not yet available. This has been updated in [ZAF_2020_QLFS_v02_M_v01_A_GLD](https://github.com/worldbank/gld/blob/main/GLD/ZAF/ZAF_2020_QLFS/ZAF_2020_QLFS_v02_M_v01_A_GLD/Programs/ZAF_2020_QLFS_v02_M_v01_A_GLD_ALL.do).
 
-Moreover, years 2012 and 2016 need special attention. Using LMDSA alone for these two years is not enough because they both lose information to some degree. LMDSA 2012 does not contain variable `Q19ATTE` which is necessary for generating the GLD variable `school`. The solution is to append QLFSs in 2012 and extract `Q19ATTE` and merge it into LMDSA 2012. Similarly, LMDSA 2016 do not have complete information on `Geo_type`. This variable can be obtained from QLFS 2016 and brought into LMDSA 2016 to get the intermidiate dta file.  
+Moreover, years 2012 and 2016 need special attention. Using LMDSA alone for these two years is not enough because they both lose information to some degree. LMDSA 2012 does not contain variable `Q19ATTE` which is necessary for generating the GLD variable `school`. The solution is to append QLFSs in 2012 and extract `Q19ATTE` and merge it into LMDSA 2012. Similarly, LMDSA 2016 do not have complete information on `Geo_type`. This variable can be obtained from QLFS 2016 and brought into LMDSA 2016 to get the intermidiate dta file. Intermediate files for [2012](utilities/append_2012) and [2016](utilities/append_2012) are in the *utilities* folder.   
 
 ### Change in implementation
 
