Amend geographic representative level info
Also change Turkey to Turkiye to reflect official name change

--- a/Support/B - Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
+++ b/Support/B - Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
@@ -10,7 +10,7 @@
 
 ## What is the TUR HLFS?
 
-The Turkish HLFS is implemented regularly since 1988  and it provides information about employment, economic activity, occupation, employment status, working hours, and unemployment in Turkey. 
+The Turkish HLFS is implemented regularly since 1988  and it provides information about employment, economic activity, occupation, employment status, working hours, and unemployment in Turkiye. 
 
 ## What does the TUR HLFS cover?
 
@@ -51,11 +51,7 @@ Note: Information on methodology is only available from 2011 onwards. The presse
 
 ## What is the geographic significance level?
 
-The official reports detail results by gender, sector (urban or rural), and province. According to [TURKSTAT](https://data.tuik.gov.tr/Bulten/Index?p=Labour-Force-Statistics-2020-37484&dil=2):
-             
-      "Coverage of persons: All private households who are living in the territory of Republic of Turkey are covered. 
-       Residents of schools, dormitories, kindergartens, rest homes for elderly persons, special hospitals, 
-        military barracks and recreation  quarters for officers are not covered."
+The data for the years up to 2003 is only representative at the national (urban and rural) level, while data from 2004 onwards is representative at the NUTS-2 level. Note that the NUTS-3 level corresponds to the provinces, the first administrative disaggregation level of the Turkish state. More on [NUTS in Turkiye here](https://en.wikipedia.org/wiki/NUTS_statistical_regions_of_Turkey)
 
 
 ## Other noteworthy aspects
@@ -74,7 +70,7 @@ The education section of the harmonized dataset was developed using the NSO raw 
 
 ### Occupation Classification
 
-The TUR HLFS occupation data followed the coding from the international classification for occupations i.e., isco-68, isco-88 and isco-08. Though variations between years happened, all the changed followed the correspondance to the international coding classification. The harmonization team prepared a separate [page](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/correspondance%20ISCO.md) that dives deeper into the changes for the case of Turkey and the resulting limitations to consider while using the harmonized dataset. 
+The TUR HLFS occupation data followed the coding from the international classification for occupations i.e., isco-68, isco-88 and isco-08. Though variations between years happened, all the changed followed the correspondance to the international coding classification. The harmonization team prepared a separate [page](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/correspondance%20ISCO.md) that dives deeper into the changes for the case of Turkiye and the resulting limitations to consider while using the harmonized dataset. 
 
 ### Industry Classification
 
@@ -82,5 +78,3 @@ The TUR HLFS industry data follow the NACE or the European industry classificati
 
 ### Other Documentation Files 
 The yearly HLFS has changed methodology since 2020. Though the do files do not cover the 2020 HLFS, users may find useful the basis for the change of methodology. Interested persons can access the information in the following [link](https://www.tuik.gov.tr/indir/metodolojikDokumanlar/hia_metod_en.pdf). 
-
-
