Update link on geographic information

--- a/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
+++ b/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
@@ -123,7 +123,7 @@ The datasets received do not contain ID information. In the GLD project, we have
 
 ### Geographic Information
 
-In 2001, the Thailand LFS changed the area of residence categories to urban and rural. Prior to that, areas of residence are categorized as municipal, non-municipal and sanitary areas. In the GLD harmonization, urban areas are mapped to municipal areas, while rural areas are mapped to non-municipal and sanitary areas. More details in a [separate document here](https://github.com/worldbank/gld/blob/Thailand_Survey_Details/Support/B%20-%20Country%20Survey%20Details/THA/Geographic%20codes.md)
+In 2001, the Thailand LFS changed the area of residence categories to urban and rural. Prior to that, areas of residence are categorized as municipal, non-municipal and sanitary areas. In the GLD harmonization, urban areas are mapped to municipal areas, while rural areas are mapped to non-municipal and sanitary areas. More details in a [separate document here](Geographic%20codes.md)
 
 
 ### Minimum age for education, migration and employment questions
