Change ref on rotation sampling and use rel link

--- a/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
+++ b/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
@@ -109,7 +109,7 @@ The datasets are not accessible to the public and researchers have to request th
 
 The LFS is designed as a stratified two-stage sampling survey. Bangkok Metropolis and the 76 provinces constituted the strata. The strata were each divided by municipal and non-municipal area. The primary sampling units were the enumeration areas for municipal and non-municipal areas. The secondary sampling units were the private households and persons in the collective households. From 2011 onwards, the sampling frame is based on the 2010 census.
 
-Since 2002, the Thailand LFS adopted a [rotation sampling design](http://web.nso.go.th/en/survey/lfs/data_lfs/2009_lf_Q3_Methodology.pdf). The sampling plan is designed with 4 rotation groups with a 2-2-2 pattern. The samples of villages are divided into 4 rotation groups, which result in the number of PSUs in a province to be equal to a one-fourth of the that of total PSUs. Two household sample sets are selected in each PSU and each is interviewed for two rounds of the survey. This results in the repetition of sample households for two quarters. Beginning 2011, a new rotation was pattern was adopted where the primary sampling units are divided into 11 PSU sets, and 4 sets of households were selected to give a total of 44 household sample sets. 
+Since 2002, the Thailand LFS adopted a [rotation sampling design](utilities/pier_dp_137.pdf). The sampling plan is designed with 4 rotation groups with a 2-2-2 pattern. The samples of villages are divided into 4 rotation groups, which result in the number of PSUs in a province to be equal to a one-fourth of the that of total PSUs. Two household sample sets are selected in each PSU and each is interviewed for two rounds of the survey. This results in the repetition of sample households for two quarters. Beginning 2011, a new rotation was pattern was adopted where the primary sampling units are divided into 11 PSU sets, and 4 sets of households were selected to give a total of 44 household sample sets. 
 
 ## What is the significance level?
 
