--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -116,3 +116,20 @@ Regarding industrial classification, 3 versions of Pakistani Standard Industrial
 Although three versions of Pakistani Standard Occupational Codes (PSCO) were involved – PSCO 1994, 2011, and 2015, they are based on two versions of international standards which are ISCO 1988 AND 2008. PSCO 1994 follows ISCO 1988 whereas PSCO 2011 and 2015 follow ISCO 2008. 
 
 In general, each single version of national standards, regardless of industry or occupation, is almost identical to their international counterparts at two-digit level. Details about industrial and occuaptional mappings are covered in this [separate document.](Correspondence_National_International_Classifications.md) 
+
+
+### Helper files for district, migration country, and training field coding
+
+We created several codelist for `subnatid2`, `migrated_from_code`, and `vocational_field_orig` according to PBS's coding scheme for each year. These files and their use can be found in the table below. 
+
+| **Document**	| **Description**	| **Referrence**| 
+| :---------:	| :-------------: | :-----------: |   
+| [PAK_city_code](utilities/helper/PAK_city_code.dta) | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for years before 2012. It was used for harmonizing the GLD variable "subnatid2".| [LFS Coding Scheme pre-2012](utilities/helper/LFS%20Coding%20Scheme%202010-11.pdf)|    
+| [PAK_city_code_2012](utilities/helper/PAK_city_code_2012.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2012. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2012](utilities/helper/LFS%20CODE%202012-13.pdf)| 
+| [PAK_city_code_2013](utilities/helper/PAK_city_code_2013.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2013. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2013](utilities/helper/LFS%20CODE%202012-13.pdf)|   
+| [PAK_city_code_2014](utilities/helper/PAK_city_code_2014.dta)  | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for 2014. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2014](utilities/helper/LFS%20Coding%202014-15.pdf)|    
+| [PAK_country_code_2020](utilities/helper/PAK_country_code_2020.dta)  | A code list containing names, Pakistan's national four-digit codes and their corresponding three-letter ISO codes of countries from which respondents migrated in the raw dataset for 2020. It was used for harmonizing the GLD variable "migrated_from_country".|[District & Country](utilities/helper/District_and_Country_Codes.pdf)| 
+| [PAK_migration_code_2020](utilities/helper/PAK_migration_code_2020.dta)  | A code list containing names and codes of districts or countries from which respondents migrated in the raw dataset for 2020. The districts in this dataset were used for harmonizing the GLD variable "migrated_from_code".|[District](utilities/helper/Coding_Scheme_LFS_2020-21_Districts_Codes.pdf)| 
+| [PAK_training_code](utilities/helper/PAK_training_code.dta)  | A code list containing the codes and names of the type of vocational training. It was used for harmonizing GLD variable "vocational_field_orig" for years 2009-2018.|[Training pre-2020](utilities/helper/MANUAL%202018-19.pdf)| 
+| [PAK_training_code_2020](utilities/helper/PAK_training_code_2020.dta) | A code list containing the codes and names of the type of vocational training. It was used for harmonizing GLD variable "vocational_field_orig" for 2020.|[Training 2020](utilities/helper/List_of_Technical_Vocational_Training_Courses.pdf)|    
+| [PAK_subnatid2_code_2020](utilities/helper/PAK_subnatid2_code_2020.dta)  |A code list containing three-digit codes and names of districts covered in the raw dataset for 2020. It was used for harmonizing the GLD variable "subnatid2".|[District](utilities/helper/Coding_Scheme_LFS_2020-21_Districts_Codes.pdf)|
